Bug 970404 - don't let users affect document colors for chrome images, r=bz, a=sylvestre